# config/routes.rb
@@ -23,6 +23,7 @@ Rails.application.routes.draw do
 
       post "auth/register", to: "auth#register"
       post "auth/login", to: "auth#login"
+      delete "auth/logout", to: "auth#logout"
       get "auth/me", to: "auth#me"
     end
   end
